--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "autoprefixer": "^10.4.14",
     "dayjs": "^1.11.9",
     "lunr": "^2.3.9",
+    "postcss": "^8.4.29",
     "sitemap": "^7.1.1"
   }
 }
